@@ -6,6 +6,7 @@
 #    yt/server/master/cell_master/serialize.cpp - if the version differs, then the update should be done with master snapshots (+ --set-read-only).
 #    yt/server/node/tablet_node/serialize.cpp - if the version differs, then the update should be done with tablet cell recreation.
 
+* shakurov: Transaction abort has changed its sematics. Update masters via snapshot.
 * babenko: YT-9991. Change use permission checks for bundles.  Update masters via snapshot.
 * babenko: YT-10892. Apart from diagonistics; also fix TTableNodeProxy::GetBasicAttributes. Update masters via snapshot.
 * aozeritsky: YT-9862. Update masters via snapshot.
